cc: Remove DCHECKs from PLI::CalculateRasterTranslation

These DCHECKs are sometimes being hit in practice, which says that they
should not be DCHECKs.  Because these are low priority mysteries, remove
the DCHECKs and just add an early out to avoid performance cliffs.

Bug: 778440, 740113
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I36d1af371127d4d29be608e1351d53a2b547b25c
Reviewed-on: https://chromium-review.googlesource.com/1228981
Reviewed-by: danakj <danakj@chromium.org>
Commit-Queue: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592480}
Former-commit-id: 8f7b4562043922f6235ef3c1662adacac4425ccb